--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,10 +6,14 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-cursive = "*"
 cli-clipboard = "0.4"
 
 [dependencies.regex]
 version = "1.9"
 default-features = false
 features = ["perf-dfa-full"]
+
+
+[dependencies.cursive]
+version = "0.20"
+features = ["toml"]
